--- a/feature-account-impl/src/main/res/layout/fragment_create_wallet_name.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_create_wallet_name.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <io.novafoundation.nova.common.view.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/createWalletNameToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:dividerVisible="false" />
@@ -31,14 +31,22 @@
         android:text="@string/account_create_name_subtitle_v2_2_0"
         android:textColor="@color/black1" />
 
-    <io.novafoundation.nova.common.view.InputField
-        android:id="@+id/createAccountNameField"
-        style="@style/Widget.Nova.Input.Primary.External"
+    <TextView
+        style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/account_wallet_nickname"
+        android:textColor="@color/white_64" />
+
+    <io.novafoundation.nova.common.view.input.TextInputView
+        android:id="@+id/createWalletNameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/x2"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="@dimen/x2"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:hint="@string/account_wallet_nickname" />
 
     <TextView
@@ -47,8 +55,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/x2"
-        android:layout_marginEnd="@dimen/x2"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="@dimen/x2"
         android:text="@string/wallet_nickname_create_caption_v2_2_0"
         android:textColor="@color/black1" />
 
@@ -58,7 +66,7 @@
         android:layout_weight="1" />
 
     <io.novafoundation.nova.common.view.PrimaryButton
-        android:id="@+id/nextBtn"
+        android:id="@+id/createWalletNameContinue"
         style="@style/Widget.Nova.Button.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
