--- a/common/src/main/res/layout/view_labeled_text.xml
+++ b/common/src/main/res/layout/view_labeled_text.xml
@@ -80,6 +80,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_copy" />
+        tools:src="@drawable/ic_copy"
+        app:tint="@color/white_64" />
 
 </merge>
