--- a/app/src/main/res/navigation/sign_parity_signer_graph.xml
+++ b/app/src/main/res/navigation/sign_parity_signer_graph.xml
@@ -7,6 +7,7 @@
 
 
     <fragment
+        app:useAdd="true"
         android:id="@+id/showSignParitySignerFragment"
         tools:layout="@layout/fragment_sign_parity_signer_show"
         android:name="io.novafoundation.nova.feature_account_impl.presentation.paritySigner.sign.show.ShowSignParitySignerFragment"
