--- a/feature-account-impl/src/main/res/layout/fragment_import_parity_signer_scan.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_import_parity_signer_scan.xml
@@ -1,25 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<io.novafoundation.nova.common.presentation.scan.ScanView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/scanImportParitySignerScan"
     android:layout_width="match_parent"
-    android:id="@+id/scanImportParitySigneContainer"
-    android:layout_height="match_parent">
-
-    <com.journeyapps.barcodescanner.BarcodeView
-        android:id="@+id/scanImportParitySigneScanner"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <io.novafoundation.nova.common.view.qr.QrViewFinderView
-        android:id="@+id/scanImportParitySigneViewFinder"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <TextView
-        android:id="@+id/scanImportParitySigneViewTitle"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="invisible"
-        android:layout_height="wrap_content"
-        style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
-        android:text="@string/account_parity_signer_scan_from" />
-</FrameLayout>
+    android:layout_height="match_parent"
+    app:title="@string/account_parity_signer_scan_from" />
