--- a/feature-account-impl/src/main/res/layout/fragment_sign_parity_signer_show.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_sign_parity_signer_show.xml
@@ -40,6 +40,8 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="280"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="24dp"
         android:padding="8dp"
