--- a/common/src/main/res/layout/view_scan.xml
+++ b/common/src/main/res/layout/view_scan.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:gravity="center_horizontal"
         android:visibility="invisible"
         tools:text="Title" />
 
@@ -30,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:gravity="center_horizontal"
         android:visibility="invisible"
         tools:text="Subtitle" />
 </merge>
