--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -272,6 +272,13 @@
         <item name="android:background">@drawable/bg_icon_big</item>
         <item name="android:padding">12dp</item>
     </style>
+
+    <style name="Widget.Nova.Icon.Big.Dashed">
+        <item name="android:layout_width">88dp</item>
+        <item name="android:layout_height">88dp</item>
+        <item name="android:background">@drawable/bg_icon_big_dashed</item>
+        <item name="android:padding">12dp</item>
+    </style>
     
     <style name="Widget.Nova.Text.Number" parent="">
         <item name="android:textAppearance">@style/TextAppearance.NovaFoundation.Regular.Body</item>
