--- a/feature-account-impl/src/main/res/layout/fragment_import_parity_signer_start.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_import_parity_signer_start.xml
@@ -30,7 +30,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
                 android:text="@string/account_parity_signer_import_start_title"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
