--- a/feature-account-impl/src/main/res/layout/fragment_sign_parity_signer_show.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_sign_parity_signer_show.xml
@@ -32,6 +32,9 @@
         style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center_horizontal"
         android:layout_gravity="center_horizontal"
         android:text="@string/account_parity_signer_scan_with" />
 
