Fix colors and add "select wallet" button

--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -58,7 +58,7 @@
 
     <color name="bar_bg_64">#A8252528</color>
 
-    <color name="accentBlue">#409DF3</color>
+    <color name="accentBlue">#2194FF</color>
     <color name="accentSecondary">#2D2D30</color>
 
     <color name="disabledColor">#1D1D20</color>
