--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -80,8 +80,12 @@
         app:destination="@id/exportJsonPasswordFragment" />
 
     <action
-        android:id="@+id/action_open_switch_accounts"
+        android:id="@+id/action_open_switch_wallet"
         app:destination="@id/switchAccountsFragment" />
+
+    <action
+        android:id="@+id/action_open_select_wallet"
+        app:destination="@id/selectAccountsFragment" />
 
     <action
         android:id="@+id/action_open_accounts"
@@ -317,14 +321,20 @@
 
     <fragment
         android:id="@+id/accountsFragment"
-        android:name="io.novafoundation.nova.feature_account_impl.presentation.account.list.AccountListFragment"
+        android:name="io.novafoundation.nova.feature_account_impl.presentation.account.management.WalletManagmentFragment"
         android:label="AccountsFragment"
         tools:layout="@layout/fragment_accounts" />
 
     <dialog
         android:id="@+id/switchAccountsFragment"
-        android:name="io.novafoundation.nova.feature_account_impl.presentation.account.select.AccountSwitchFragment"
-        android:label="SwitchAccountsFragment"
+        android:name="io.novafoundation.nova.feature_account_impl.presentation.account.list.switching.SwitchWalletFragment"
+        android:label="SwitchWalletFragment"
+        tools:layout="@layout/bottom_sheet_dynamic_list" />
+
+    <dialog
+        android:id="@+id/selectAccountsFragment"
+        android:name="io.novafoundation.nova.feature_account_impl.presentation.account.list.selecting.SelectWalletFragment"
+        android:label="SelectWalletFragment"
         tools:layout="@layout/bottom_sheet_dynamic_list" />
 
     <fragment
