--- a/feature-assets/src/main/res/layout/fragment_select_send.xml
+++ b/feature-assets/src/main/res/layout/fragment_select_send.xml
@@ -76,6 +76,7 @@
 
         <TextView
             style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
+            android:id="@+id/selectWallet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
