--- a/feature-account-impl/src/main/res/layout/item_account.xml
+++ b/feature-account-impl/src/main/res/layout/item_account.xml
@@ -38,10 +38,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="5dp"
-        android:singleLine="true"
-        android:ellipsize="end"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
         android:includeFontPadding="false"
+        android:singleLine="true"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/itemAccountSubtitle"
         app:layout_constraintEnd_toStartOf="@+id/itemAccountEndBarrier"
@@ -59,6 +59,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="5dp"
+        android:ellipsize="middle"
+        android:gravity="center_vertical"
+        android:includeFontPadding="false"
+        android:lines="1"
+        android:minHeight="18dp"
         android:textColor="@color/white_64"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/itemAccountEndBarrier"
