--- a/feature-assets/src/main/res/layout/fragment_select_send.xml
+++ b/feature-assets/src/main/res/layout/fragment_select_send.xml
@@ -65,6 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:clipChildren="false"
+        android:minHeight="24dp"
         android:paddingStart="16dp"
         android:paddingEnd="12dp">
 
@@ -74,17 +75,19 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start|bottom"
             android:layout_marginBottom="4dp"
+            android:includeFontPadding="false"
             android:text="@string/wallet_recipient"
             android:textColor="@color/white_64" />
 
         <LinearLayout
             android:id="@+id/selectWallet"
             android:layout_width="wrap_content"
-            android:layout_height="24dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
-            android:background="@drawable/bg_button_primary"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:padding="4dp">
+            android:padding="4dp"
+            android:visibility="invisible">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -102,12 +105,18 @@
                 android:layout_gravity="center_vertical"
                 android:gravity="center"
                 android:includeFontPadding="false"
-                android:text="@string/wallet_select"
-                android:textColor="@color/accentBlue"
-                app:drawableEndCompat="@drawable/ic_chevron_down_16"
-                app:drawableTint="@color/accentBlue"
-                tools:drawableEnd="@drawable/ic_chevron_down_16"
-                tools:drawableTint="@color/accentBlue" />
+                android:text="@string/assets_select_send_your_wallets"
+                android:textColor="@color/accentBlue" />
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="5dp"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/ic_chevron_down"
+                app:tint="@color/accentBlue"
+                tools:tint="@color/accentBlue" />
 
         </LinearLayout>
 
