--- a/feature-account-impl/src/main/res/layout/fragment_wallet_list.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_wallet_list.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/switchAccountItemContainer"
+    android:id="@+id/walletListItemContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <View
-        android:id="@+id/switchAccountPuller"
+        android:id="@+id/walletListPuller"
         style="@style/Widget.Nova.Puller"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="4dp" />
@@ -21,43 +21,40 @@
         tools:ignore="UseCompoundDrawables">
 
         <TextView
-            android:id="@+id/switchAccountTitle"
+            android:id="@+id/walletListTitle"
             style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="17dp"
-            android:layout_weight="1"
-            android:text="@string/account_select_wallet" />
+            android:layout_weight="1" />
 
         <ImageView
-            android:id="@+id/switchAccountRightAction"
+            android:id="@+id/walletListBarAction"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="12dp"
-            android:src="@drawable/ic_settings_outline"
-            app:tint="@color/actions_color"
-            tools:src="@drawable/ic_settings_outline" />
+            app:tint="@color/actions_color" />
     </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/switchAccountScrollView"
+        android:id="@+id/walletListScrollView"
         android:layout_width="match_parent"
-        android:paddingBottom="16dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:clipToPadding="false"
         android:overScrollMode="never"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:paddingBottom="16dp">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/switchAccountContent"
-                android:overScrollMode="never"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:itemCount="1"
-                tools:listitem="@layout/item_account" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/walletListContent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="1"
+            tools:listitem="@layout/item_account" />
 
     </androidx.core.widget.NestedScrollView>
 </LinearLayout>
