Extract instruction components into separate views

--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -173,4 +173,13 @@
         <attr name="title" />
         <attr name="subTitle" />
     </declare-styleable>
+
+    <declare-styleable name="InstructionStepView">
+        <attr name="step_number" format="string" />
+        <attr name="step_text" format="string" />
+    </declare-styleable>
+
+    <declare-styleable name="NovaConnectView">
+        <attr name="target_image" format="reference" />
+    </declare-styleable>
 </resources>
