--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -175,11 +175,15 @@
     </declare-styleable>
 
     <declare-styleable name="InstructionStepView">
-        <attr name="step_number" format="string" />
-        <attr name="step_text" format="string" />
+        <attr name="stepNumber" format="string" />
+        <attr name="stepText" format="string" />
     </declare-styleable>
 
     <declare-styleable name="NovaConnectView">
-        <attr name="target_image" format="reference" />
+        <attr name="targetImage" format="reference" />
+    </declare-styleable>
+
+    <declare-styleable name="LinkView">
+        <attr name="linkText" format="string" />
     </declare-styleable>
 </resources>
