--- a/feature-ledger-impl/src/main/res/layout/fragment_import_ledger_start.xml
+++ b/feature-ledger-impl/src/main/res/layout/fragment_import_ledger_start.xml
@@ -8,7 +8,7 @@
     tools:background="@color/black">
 
     <io.novafoundation.nova.common.view.Toolbar
-        android:id="@+id/startImportParitySignerToolbar"
+        android:id="@+id/startImportLedgerToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:dividerVisible="false" />
@@ -27,76 +27,69 @@
             android:paddingBottom="16dp">
 
             <TextView
-                android:id="@+id/startImportParitySignerTitle"
+                android:id="@+id/startImportLedgerTitle"
                 style="@style/TextAppearance.NovaFoundation.Bold.Title2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/account_parity_signer_import_start_title" />
+                android:text="@string/account_ledger_import_start_title" />
+
+            <io.novafoundation.nova.common.view.LinkView
+                android:layout_width="wrap_content"
+                android:id="@+id/startImportLedgerGuideLink"
+                android:layout_marginTop="8dp"
+                android:layout_height="match_parent"
+                app:linkText="@string/account_ledger_import_start_guide" />
 
             <io.novafoundation.nova.common.view.NovaConnectView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="32dp"
-                app:targetImage="@drawable/ic_parity_signer" />
+                app:targetImage="@drawable/ic_ledger" />
 
             <io.novafoundation.nova.common.view.InstructionStepView
-                android:id="@+id/startImportParitySignerStep1"
+                android:id="@+id/startImportLedgerStep1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 app:stepNumber="1"
-                app:stepText="@string/account_parity_signer_import_start_step_1" />
+                app:stepText="@string/account_ledger_import_start_step_1" />
 
             <io.novafoundation.nova.common.view.InstructionStepView
-                android:id="@+id/startImportParitySignerStep2"
+                android:id="@+id/startImportLedgerStep2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 app:stepNumber="2"
-                app:stepText="@string/account_parity_signer_import_start_step_2" />
-
-            <TextView
-                android:id="@+id/startImportParitySignerSelectTop"
-                style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="48dp"
-                android:layout_marginTop="12dp"
-                android:drawablePadding="6dp"
-                android:text="@string/account_parity_signer_import_start_select_top"
-                android:textColor="@color/green"
-                app:drawableStartCompat="@drawable/ic_checkmark_circle_16"
-                app:drawableTint="@color/green" />
-
-            <ImageView
-                android:id="@+id/startImportParitySignerSelectTopImage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="48dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginEnd="16dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/my_parity_signer" />
+                app:stepText="@string/account_ledger_import_start_step_2" />
 
             <io.novafoundation.nova.common.view.InstructionStepView
-                android:id="@+id/startImportParitySignerStep3"
+                android:id="@+id/startImportLedgerStep3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:stepNumber="3"
-                app:stepText="@string/account_parity_signer_import_start_step_3" />
+                app:stepText="@string/account_ledger_import_start_step_3" />
+
+            <io.novafoundation.nova.common.view.InstructionStepView
+                android:id="@+id/startImportLedgerStep4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:stepNumber="4"
+                app:stepText="@string/account_ledger_import_start_step_4" />
         </LinearLayout>
 
     </ScrollView>
 
     <io.novafoundation.nova.common.view.PrimaryButton
-        android:id="@+id/startImportParitySignerScanQrCode"
+        android:id="@+id/startImportLedgerContinue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="@string/contacts_scan" />
+        android:text="@string/common_continue" />
 
 </LinearLayout>
